--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -4,8 +4,15 @@
         <img class="w-100 h-100" src="/assets/login.png" alt="Login">
     </div>
     <div>
-      <p class="login-txt mb-0">Lets track your expense</p>
+      <p class="login-txt mb-0">Let's track your expense</p>
       <p class="login-txt text-primary">And splits</p>
     </div>
+  </div>
+  <!-- google login button -->
+  <div>
+<button class="d-flex p-2 justify-content-center border w-100 btn text-primary" (click)="googleSign()">
+  <p class="mb-0 me-2"><i class="bi bi-google"></i></p>
+  <p class="fw-bold mb-0">Tap to Google Login</p>
+</button>
   </div>
 </div>
