basic home age setup

--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -2,8 +2,8 @@
   <router-outlet></router-outlet>
   <!-- bottom nav bar -->
   <div
-    class="container position-fixed bottom-0 start-0 end-0 w-100 py-1">
-    <div class="row px-1 border border-top">
+    class="container position-fixed bottom-0 start-0 end-0 w-100 py-1 app-bg-secondary">
+    <div class="row px-1">
       <div routerLinkActive="active p-2" class="col rounded p-1">
         <a class="d-flex flex-column align-items-center" routerLink="/home">
           <i class="bi bi-house-door-fill fs-3"></i>
