--- a/src/global.scss
+++ b/src/global.scss
@@ -32,6 +32,23 @@
  * https://ionicframework.com/docs/theming/dark-mode
  */
 
-/* @import "@ionic/angular/css/palettes/dark.always.css"; */
-/* @import "@ionic/angular/css/palettes/dark.class.css"; */
+// @import "@ionic/angular/css/palettes/dark.always.css"; 
+// @import "@ionic/angular/css/palettes/dark.class.css"; 
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+.app-bg-primary {
+    background-color: var(--primary-color) !important;
+}
+
+.app-bg-secondary {
+    background-color: var(--secondary-color) !important;
+}
+
+.app-text-primary {
+   color: var(--primary-color) !important;
+}
+
+.app-text-secondary {
+   color: var(--secondary-color) !important;
+}
