--- a/src/app/components/groups-list/groups-list.component.html
+++ b/src/app/components/groups-list/groups-list.component.html
@@ -1,6 +1,9 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="row p-2 my-2 rounded bg-light shadow-lg" *ngFor="let i of [1, 2, 3, 4, 5, 6]">
+<div class="container h-100">
+  <div class="row justify-content-center h-100 group-card-wrapper">
+    <div
+      class="row p-2 my-3 rounded bg-light shadow"
+      *ngFor="let i of [1, 2, 3, 4, 6, 7, 8]"
+    >
       <div class="col-4">
         <img
           class="group-icon"
@@ -10,7 +13,8 @@
       </div>
       <div class="col-8">
         <h5>UG 851 Home</h5>
-        <small>you owns </small> <small class="fw-bold app-text-primary"> $364</small>
+        <small>you owns </small>
+        <small class="fw-bold app-text-primary"> $364</small>
       </div>
     </div>
   </div>
