new bottom tabs

--- a/src/app/components/groups-list/groups-list.component.html
+++ b/src/app/components/groups-list/groups-list.component.html
@@ -1,7 +1,7 @@
 <div class="container h-100">
   <div class="row justify-content-center h-100 group-card-wrapper">
-    <div
-      class="row p-2 my-3 rounded bg-light shadow"
+    <ion-card
+      class="row p-2 my-3 rounded"
       *ngFor="let i of [1, 2, 3, 4, 6, 7, 8]"
     >
       <div class="col-4">
@@ -16,6 +16,6 @@
         <small>you owns </small>
         <small class="fw-bold app-text-primary"> $364</small>
       </div>
-    </div>
+    </ion-card>
   </div>
 </div>
