--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -4,10 +4,10 @@
     }
 }
 
-a {
-    text-decoration: none;
-}
 
-.nav-text{
-    font-size: .8rem;
+ion-tabs {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 56px;
 }
