--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,33 +1,38 @@
-<div class="vh-100">
+<ion-content>
+  <!-- main content -->
   <router-outlet></router-outlet>
-  <!-- bottom nav bar -->
-  <div
-    class="container position-fixed bottom-0 start-0 end-0 w-100 py-1 app-bg-secondary">
-    <div class="row px-1">
-      <div routerLinkActive="active p-2" class="col rounded p-1">
-        <a class="d-flex flex-column align-items-center" routerLink="/home">
-          <i class="bi bi-house-door-fill fs-3"></i>
-          <span class="nav-text">Home</span>
-        </a>
-      </div>
-      <div routerLinkActive="active p-2" class="col rounded p-1">
-        <a class="d-flex flex-column align-items-center" routerLink="/activity">
-          <i class="bi bi-activity fs-3"></i>
-          <span class="nav-text">Activity</span>
-        </a>
-      </div>
-      <div routerLinkActive="active p-2" class="col rounded p-1">
-        <a class="d-flex flex-column align-items-center" routerLink="/transactions">
-          <i class="bi bi-coin fs-3"></i>
-          <span class="nav-text">Transactions</span>
-        </a>
-      </div>
-      <div routerLinkActive="active p-2" class="col rounded p-1">
-        <a class="d-flex flex-column align-items-center" routerLink="/account">
-          <i class="bi bi-person-lock fs-3"></i>
-          <span class="nav-text">Account</span>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
+</ion-content>
+
+<!-- bottom tabs content -->
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="home" routerLink="/home" routerLinkActive="active">
+      <ion-icon name="home"></ion-icon>
+      Home
+    </ion-tab-button>
+    <ion-tab-button
+      tab="activity"
+      routerLink="/activity"
+      routerLinkActive="active"
+    >
+      <ion-icon name="analytics-outline"></ion-icon>
+      Activity
+    </ion-tab-button>
+    <ion-tab-button
+      tab="transactions"
+      routerLink="/transactions"
+      routerLinkActive="active"
+    >
+      <ion-icon name="cash-outline"></ion-icon>
+      Transactions
+    </ion-tab-button>
+    <ion-tab-button
+      tab="profile"
+      routerLink="/profile"
+      routerLinkActive="active"
+    >
+      <ion-icon name="person-circle-outline"></ion-icon>
+      Profile
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
