--- a/src/app/pages/create-group/create-group.component.html
+++ b/src/app/pages/create-group/create-group.component.html
@@ -1,3 +1,58 @@
-<p>
-  create-group works!
-</p>
+<ion-modal [isOpen]="modelStatus" (willDismiss)="onWillDismiss($event)">
+  <ng-template>
+    <div class="row">
+      <div class="col-3">
+        <ion-button fill="clear" color="dark" (click)="close()"
+          >Close</ion-button
+        >
+      </div>
+      <div class="col-6 mt-2 fw-bold">Create a group</div>
+    </div>
+
+    <ion-content class="ion-padding mt-4">
+      <form [formGroup]="createGroupForm" (ngSubmit)="onSubmit()">
+        <div class="container">
+          <div class="row">
+            <div class="col-2 border rounded">
+              <ion-icon name="image-outline" class="w-100 h-100"></ion-icon>
+            </div>
+            <div class="col-10">
+              <ion-input
+                formControlName="name"
+                label="Group Name"
+                label-placement="floating"
+                fill="outline"
+                placeholder="Group Name"
+                [autofocus]="true"
+              ></ion-input>
+            </div>
+
+            <p class="fw-bold mt-3">Group Type</p>
+            <div class="col-12 d-flex overflow-auto m-1">
+              <div>
+                <ion-chip
+                class="my-2"
+                  *ngFor="let g of groupTypes"
+                  (click)="selectGroupType(g.name)"
+                  [ngClass]="
+                    g.name === selectedGroupType ? 'app-bg-primary' : ''
+                  "
+                >
+                  <ion-icon [name]="g.icon" color="dark"></ion-icon>
+                  <ion-label>{{ g.name }}</ion-label>
+                </ion-chip>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <ion-button
+          expand="full"
+          type="submit"
+          [disabled]="createGroupForm.invalid"
+          >Create Group</ion-button
+        >
+      </form>
+    </ion-content>
+  </ng-template>
+</ion-modal>
