--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,22 @@
 @font-face {
-    font-family: 'Matemasie';
-    src: url('/assets/fonts/Matemasie-Regular.ttf') format('truetype'); /* Use 'truetype' for .ttf files */
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: "Matemasie";
+  src: url("/assets/fonts/Matemasie-Regular.ttf") format("truetype"); /* Use 'truetype' for .ttf files */
+  font-weight: normal;
+  font-style: normal;
+}
 
+html body {
+  height: 100% !important;
+  margin: 0 !important;
+}
 
-  html body {
-    height: 100% !important;
-    margin: 0 !important;
-  }
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
