--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -60,7 +60,7 @@
           <p class="fw-bold fs-3 mb-0 text-center">______</p>
           <h3>Groups</h3>
           <!-- Groups List Component -->
-          <app-groups-list></app-groups-list>
+          <app-groups-list [groupData]="groupListDetails"></app-groups-list>
         </div>
       </div>
     </div>
