--- a/src/app/pages/view-group/view-group.component.html
+++ b/src/app/pages/view-group/view-group.component.html
@@ -73,6 +73,6 @@
   </div>
 
 <!-- external pages -->
-<app-add-group-member [modelStatus]="isAddMemberDialogOpen" (closeModal)="handleCloseModal($event)"></app-add-group-member>
+<app-add-group-member [groupId]="groupId" [modelStatus]="isAddMemberDialogOpen" (closeModal)="handleCloseModal($event)"></app-add-group-member>
 </ion-content>
 
